force-app/main/default/objects/Farvision_API_Settings__c/Farvision_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store all required urls, password and key to integrate with farvision application.</description>
    <label>Farvision API Settings</label>
</CustomObject>