force-app/main/default/objects/Farvision_API_Settings__c/fields/FV_Authenticate_User__c.field-meta.xml
<CustomField>
    <fullName>FV_Authenticate_User__c</fullName>
    <description>Farvision API Authenticate User URL</description>
    <inlineHelpText>Farvision API Authenticate User URL</inlineHelpText>
    <label>FV Authenticate User</label>
    <type>Url</type>
</CustomField>