force-app/main/default/objects/Farvision_API_Settings__c/fields/FV_Create_Application__c.field-meta.xml
<CustomField>
    <fullName>FV_Create_Application__c</fullName>
    <description>Farvision API Create Application URL</description>
    <inlineHelpText>Farvision API Create Application URL</inlineHelpText>
    <label>FV Create Application</label>
    <type>Url</type>
</CustomField>