force-app/main/default/objects/Farvision_API_Settings__c/fields/FV_Password__c.field-meta.xml
<CustomField>
    <fullName>FV_Password__c</fullName>
    <description>Contains Password to use Farvision API</description>
    <inlineHelpText>Contains Password to use Farvision API</inlineHelpText>
    <label>FV Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>