force-app/main/default/objects/Farvision_API_Settings__c/fields/FV_SecurityKey__c.field-meta.xml
<CustomField>
    <fullName>FV_SecurityKey__c</fullName>
    <description>Contains SecurityKey to use farvision api</description>
    <inlineHelpText>Contains SecurityKey to use farvision api</inlineHelpText>
    <label>FV SecurityKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>