force-app/main/default/objects/Farvision_API_Settings__c/fields/FV_UserID__c.field-meta.xml
<CustomField>
    <fullName>FV_UserID__c</fullName>
    <description>Contains UserID to use farvision api</description>
    <inlineHelpText>Contains UserID to use farvision api</inlineHelpText>
    <label>FV UserID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>