force-app/main/default/objects/Farvision_API_Settings__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Contains request timeout</description>
    <inlineHelpText>Contains request timeout</inlineHelpText>
    <label>Timeout</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>